err/vanellope.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/ua_parser'...
Listing './lib/python3.5/site-packages/ua_parser-0.7.3.dist-info'...
Listing './lib/python3.5/site-packages/user_agents'...
Listing './lib/python3.5/site-packages/user_agents-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/vanellope'...
Listing './lib/python3.5/site-packages/vanellope/.sass-cache'...
Listing './lib/python3.5/site-packages/vanellope/.sass-cache/79718787981d86e5366a69ec5c3e3387261faf1b'...
Listing './lib/python3.5/site-packages/vanellope/admin'...
Listing './lib/python3.5/site-packages/vanellope/admin/.sass-cache'...
Listing './lib/python3.5/site-packages/vanellope/admin/.sass-cache/5f28f2931d04d4e60c5b24162cc489ce4a747518'...
Listing './lib/python3.5/site-packages/vanellope/admin/.sass-cache/79718787981d86e5366a69ec5c3e3387261faf1b'...
Listing './lib/python3.5/site-packages/vanellope/admin/sass'...
Listing './lib/python3.5/site-packages/vanellope/admin/static'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/.sass-cache'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/.sass-cache/651f96584e02ce650e33056264c9c99909b1b69c'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/css'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/css/.sass-cache'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/css/.sass-cache/0eac94dc0457b69c82528fefb5ad38564a7509f8'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/css/.sass-cache/bf89005931abd7085601bcbb4e67dcd054bba766'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/css/.sass-cache/e8f64c52760ff565af63bd8e8ba0b6c3ca37d477'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/favicon'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/fonts'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/fonts/Roboto'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/img'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/js'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/js/simditor'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/js/simditor/images'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/js/simditor/scripts'...
Listing './lib/python3.5/site-packages/vanellope/admin/static/js/simditor/styles'...
Listing './lib/python3.5/site-packages/vanellope/admin/templates'...
Listing './lib/python3.5/site-packages/vanellope/admin/templates/common'...
Listing './lib/python3.5/site-packages/vanellope/admin/templates/partials'...
Compiling './lib/python3.5/site-packages/vanellope/app.py'...
***   File "./lib/python3.5/site-packages/vanellope/app.py", line 81
    print 'VANELLOPE running on %d' % options.port
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vanellope/handlers'...
Listing './lib/python3.5/site-packages/vanellope/test'...
Listing './lib/python3.5/site-packages/vanellope/themes'...
Listing './lib/python3.5/site-packages/vanellope/themes/default'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/.sass-cache'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/.sass-cache/07d4764d12bbcde4ed7e409a62989f49240039bf'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/.sass-cache/5f28f2931d04d4e60c5b24162cc489ce4a747518'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/sass'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/sass/components'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/.sass-cache'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/.sass-cache/651f96584e02ce650e33056264c9c99909b1b69c'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/css'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/css/.sass-cache'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/css/.sass-cache/0eac94dc0457b69c82528fefb5ad38564a7509f8'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/css/.sass-cache/bf89005931abd7085601bcbb4e67dcd054bba766'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/css/.sass-cache/e8f64c52760ff565af63bd8e8ba0b6c3ca37d477'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/favicon'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/fonts'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/fonts/Roboto'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/img'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/static/js'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/templates'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/templates/common'...
Listing './lib/python3.5/site-packages/vanellope/themes/default/templates/partials'...
Listing './lib/python3.5/site-packages/vanellope-0.1.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
